add a few products

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
+  
+    <div id="app"></div>
+
+    <!-- <ul id='phones'></ul>
+    <ul id='tvs'></ul>
+    <ul id='cars'></ul>
+    <ul id='computers'></ul>
+    <ul id='tablets'></ul>
+    <ul id='watches'></ul> -->
 
     <script src="index.js" type="module"></script>
   </body>
